# platform.adaptation.tm1.sensor-hal-tm1

./: CMakeLists.txt  sensors.xml.in
packaging/: sensor-hal-tm1.spec  sensor-hal.spec  sensor-plugins-tm1.spec
src/: CMakeLists.txt  create.cpp  hal_module_create.cpp.in  macro.h  sensor_common.h  sensor_device_base.cpp  sensor_device_create.cpp.in  sensor_hal.h  sensor_log.h  sensor_logs.h  util.cpp  util.h
src/accel/: accel.cpp  accel.h  accel_device.cpp  accel_sensor_device.cpp  accel_sensor_device.h
src/gyro/: gyro_sensor_hal.cpp
src/interface/: sensor_device_base.h  sensor_hal.h  sensor_hal_base.cpp  sensor_hal_base.h
src/lib/: sensor_common.h  sensor_logs.cpp  sensor_logs.h
src/light/: light_sensor_hal.cpp  light_sensor_hal.h
src/magnetic/: geo_sensor_hal.cpp  geo_sensor_hal.h
src/plugins/accel/: accel_sensor_device.cpp  accel_sensor_hal.cpp  accel_sensor_hal.h
src/plugins/bio_led_red/: bio_led_red_sensor_hal.cpp  bio_led_red_sensor_hal.h
src/plugins/gyro/: gyro_sensor_hal.h
src/plugins/pressure/: pressure_sensor_hal.h
src/plugins/proxi/: proxi_sensor_device.cpp  proxi_sensor_hal.cpp  proxi_sensor_hal.h
src/plugins/rotation_vector/rv_raw/: rv_raw_sensor_hal.cpp
src/plugins/temperature/: temperature_sensor_hal.cpp  temperature_sensor_hal.h
src/pressure/: pressure_sensor_hal.cpp
src/proxi/: proxi.cpp  proxi.h  proxi_device.cpp  proxi_device.h
src/proximity/: proxi.cpp  proxi.h  proxi_sensor_device.cpp  proxi_sensor_device.h
src/rotation_vector/rv_raw/: rv_raw_sensor_hal.h
src/sensorhub/: dbus_util.cpp  dbus_util.h  sensorhub.cpp  sensorhub.h  sensorhub_controller.cpp  sensorhub_controller.h  sensorhub_manager.cpp  sensorhub_manager.h  sensorhub_sensor.cpp  sensorhub_sensor.h  system_state.cpp  system_state.h  wristup.cpp  wristup.h
src/ultraviolet/: ultraviolet_sensor_hal.cpp  ultraviolet_sensor_hal.h
