CMAKE_MINIMUM_REQUIRED(VERSION 2.6)
PROJECT(sensor-plugins-tm1 CXX)
INCLUDE(GNUInstallDirs)


SET(ACCEL "ON")
SET(GYRO "OFF")
SET(PROXIMITY "ON")
SET(LIGHT "OFF")
SET(MAGNETIC "OFF")
SET(PRESSURE "OFF")
SET(TEMPERATURE "OFF")
SET(ULTRAVIOLET "OFF")
SET(ROTATION_VECTOR "OFF")
SET(HRM_LED_RED "OFF")


# Common Options
SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wall -O2 -omit-frame-pointer -std=gnu++0x")
SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -fdata-sections -ffunction-sections")
SET(CMAKE_EXE_LINKER_FLAGS "${CMAKE_EXE_LINKER_FLAGS} -Wl,--gc-section -Wl,--print-gc-section")
MESSAGE("FLAGS: ${CMAKE_CXX_FLAGS}")
MESSAGE("FLAGS: ${CMAKE_EXE_LINKER_FLAGS}")

# Internal Debugging Options
#ADD_DEFINITIONS(-Wall -g -D_DEBUG)

INCLUDE(FindPkgConfig)
PKG_CHECK_MODULES(plugin_pkgs REQUIRED dlog)

FOREACH(flag ${plugin_pkgs_LDFLAGS})
	SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} ${flag}")
ENDFOREACH(flag)

FOREACH(flag ${plugin_pkgs_CFLAGS})
	SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} ${flag}")
ENDFOREACH(flag)

SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -fPIC")

INCLUDE_DIRECTORIES(${CMAKE_SOURCE_DIR}/src)
FILE(GLOB SRCS src/*.cpp)

IF("${ACCEL}" STREQUAL "ON")
FILE(GLOB_RECURSE SRCS ${SRCS} src/accel/*.cpp)
ADD_DEFINITIONS(-DENABLE_ACCEL)
ENDIF()

IF("${GYRO}" STREQUAL "ON")
FILE(GLOB_RECURSE SRCS ${SRCS} src/gyro/*.cpp)
ADD_DEFINITIONS(-DENABLE_GYRO)
ENDIF()

IF("${PROXIMITY}" STREQUAL "ON")
FILE(GLOB_RECURSE SRCS ${SRCS} src/proximity/*.cpp)
ADD_DEFINITIONS(-DENABLE_PROXIMITY)
ENDIF()

IF("${LIGHT}" STREQUAL "ON")
FILE(GLOB_RECURSE SRCS ${SRCS} src/light/*.cpp)
ADD_DEFINITIONS(-DENABLE_LIGHT)
ENDIF()

IF("${MAGNETIC}" STREQUAL "ON")
FILE(GLOB_RECURSE SRCS ${SRCS} src/magnetic/*.cpp)
ADD_DEFINITIONS(-DENABLE_MAGNETIC)
ENDIF()

IF("${PRESSURE}" STREQUAL "ON")
FILE(GLOB_RECURSE SRCS ${SRCS} src/pressure/*.cpp)
ADD_DEFINITIONS(-DENABLE_PRESSURE)
ENDIF()

IF("${TEMPERATURE}" STREQUAL "ON")
FILE(GLOB_RECURSE SRCS ${SRCS} src/temperature/*.cpp)
ADD_DEFINITIONS(-DENABLE_TEMPERATURE)
ENDIF()

IF("${ULTRAVIOLET}" STREQUAL "ON")
FILE(GLOB_RECURSE SRCS ${SRCS} src/ultraviolet/*.cpp)
ADD_DEFINITIONS(-DENABLE_ULTRAVIOLET)
ENDIF()

IF("${HRM_LED_RED}" STREQUAL "ON")
FILE(GLOB_RECURSE SRCS ${SRCS} src/hrm_led_led/*.cpp)
ADD_DEFINITIONS(-DENABLE_HRM_LED_RED)
ENDIF()

IF("${ROTATION_VECTOR}" STREQUAL "ON")
FILE(GLOB_RECURSE SRCS ${SRCS} src/rotation_vector/*.cpp)
ADD_DEFINITIONS(-DENABLE_ROTATION_VECTOR)
ENDIF()

MESSAGE("Sources: ${SRCS}")
ADD_LIBRARY(${PROJECT_NAME} SHARED ${SRCS})
TARGET_LINK_LIBRARIES(${PROJECT_NAME} ${plugin_pkgs_LDFLAGS})

INSTALL(TARGETS ${PROJECT_NAME} DESTINATION ${CMAKE_INSTALL_LIBDIR}/sensor)
